Bug 868040 - GC: Fix some rooting hazards in content/base r=bz