content/base/src/nsFrameMessageManager.cpp
@@ -1028,7 +1028,7 @@ nsFrameScriptExecutor::TryCacheLoadAndCompileScript(const nsAString& aURL,
   if (NS_FAILED(rv)) {
     return;
   }
-  
+
   bool hasFlags;
   rv = NS_URIChainHasFlags(uri,
                            nsIProtocolHandler::URI_IS_LOCAL_RESOURCE,
@@ -1037,7 +1037,7 @@ nsFrameScriptExecutor::TryCacheLoadAndCompileScript(const nsAString& aURL,
     NS_WARNING("Will not load a frame script!");
     return;
   }
-  
+
   nsCOMPtr<nsIChannel> channel;
   NS_NewChannel(getter_AddRefs(channel), uri);
   if (!channel) {
@@ -1129,7 +1129,7 @@ nsFrameScriptExecutor::InitTabChildGlobalInternal(nsISupports* aScope,
   nsIXPConnect* xpc = nsContentUtils::XPConnect();
   const uint32_t flags = nsIXPConnect::INIT_JS_STANDARD_CLASSES;
 
-  
+
   JS_SetContextPrivate(cx, aScope);
 
   nsresult rv =
@@ -1137,7 +1137,7 @@ nsFrameScriptExecutor::InitTabChildGlobalInternal(nsISupports* aScope,
                                          flags, JS::SystemZone, getter_AddRefs(mGlobal));
   NS_ENSURE_SUCCESS(rv, false);
 
-    
+
   JS::Rooted<JSObject*> global(cx);
   rv = mGlobal->GetJSObject(global.address());
   NS_ENSURE_SUCCESS(rv, false);
